--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 </div>
                 <div class="resume-colum">
                     <h3 class="resume-colum-title">My Experience</h3>
+
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
@@ -145,6 +146,9 @@
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
